Horizontal Scrolling prevented

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
+html, body {
+    height: 100%;
+    overflow-x: hidden; 
+    margin: 0;
+}
 
 body{
     background-color: black;
